# smtp2go-python

./: pyproject.toml  setup.py
smtp2go/: core.py
